// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle show component with personalized title 1`] = `
<span
  className="productDescription undefined"
>
  custom title
</span>
`;

exports[`ProductTitle show component with product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card
  </span>
</div>
`;
